--- a/css/main.scss
+++ b/css/main.scss
@@ -13,13 +13,14 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+/* Defined theme color start */
+$theme-color: #9C27B0;
+$theme-color-light: lighten($theme-color, 40%);
+$theme-color-dark:  darken($theme-color, 25%);
+$theme-text-color: #111;
+$theme-background-color: #fdfdfd;
+$theme-brand-color:      #673AB7;
+/* Defined theme color end */
 
 $on-palm:          600px;
 $on-laptop:        800px;
