Add Smile-ball widget
Add animation in 爱奇艺 and add Smile-ball widget with animation

--- a/sub-sites/css-free-board/css/widget/iqiyi-logo.css
+++ b/sub-sites/css-free-board/css/widget/iqiyi-logo.css
@@ -110,16 +110,26 @@
 	float: left;
 	position: relative;
 	left: 20px;
-	top: 20px;
+	top: 25px;
 }
 .iqiyi-logo .name .text {
 	margin: -5px;
-	transition: color 0.5s;
 }
-.iqiyi-logo:hover .name .text{
-	color: transparent;
+.iqiyi-logo:hover .name .text {
+	opacity: 0;
+	animation: showtext 0.5s linear forwards;
+	cursor: pointer;
 }
-@keyframe show-text {
-	from: 0;
-	to: 100;
+@keyframes showtext {
+	from {opacity: 0; font-size: 0%;}
+	to   {opacity: 1; font-size: 100%;}
+}
+.iqiyi-logo:hover .name .text-1 {
+	animation-delay: 0s;
+}
+.iqiyi-logo:hover .name .text-2 {
+	animation-delay: 0.5s;
+}
+.iqiyi-logo:hover .name .text-3 {
+	animation-delay: 1s;
 }
