change theme primary color

--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 /* Defined theme color start */
 $theme-text-color: #111;
 $theme-background-color: #fdfdfd;
-$theme-brand-color:      #9c27b0;
+$theme-brand-color:      #673ab7;
 $theme-brand-color-light: lighten($theme-brand-color, 20%);
 $theme-brand-color-xlight: lighten($theme-brand-color, 30%);
 $theme-brand-color-xxlight: lighten($theme-brand-color, 50%);
