--- a/css-src/style.css
+++ b/css-src/style.css
@@ -1,47 +1,45 @@
-/*
- * css reset
- */
+@import url(reset.css);
+a {
+  text-decoration: none; }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
+.header {
+  border-bottom: 5px solid #333;
+  background-color: #fafafa;
+  min-height: 100%;
+  display: table;
+  width: 100%;
+  color: #444; }
+  .header .header-info {
+    margin: 0 auto;
+    width: 80%; }
+    .header .header-info > * {
+      margin-bottom: 30px; }
+    .header .header-info .header-name {
+      font-size: 4rem; }
+    .header .header-info .header-intro {
+      font-size: 2rem; }
+    .header .header-info .header-social {
+      font-size: 1rem; }
+      .header .header-info .header-social li {
+        margin: 10px 0; }
+        .header .header-info .header-social li a {
+          background-color: #9C27B0;
+          border-radius: 10px;
+          padding: 2px 10px;
+          color: white; }
+          .header .header-info .header-social li a:hover {
+            background-color: #7b1fa2; }
+
+.article {
+  background-color: #444;
+  padding: 50px 0;
+  width: 90%;
+  margin: 0 auto; }
+
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 10px 0;
+  text-align: center; }
+
+/*# sourceMappingURL=style.css.map */
