--- a/css-src/style.scss
+++ b/css-src/style.scss
@@ -1,6 +1,9 @@
 @import 'reset.css';
 
 // Reset css
+body {
+	font-family: 'Open Sans',sans-serif;
+}
 a {
 	text-decoration: none;
 }
@@ -23,20 +26,25 @@ $dark-bg-clr: #444;
     display: table;
     width: 100%;
     color: $char-clr;
+    position: relative;
     .header-info {
-    	margin: 0 auto;
-    	width: 80%;
+    	position: relative;
+    	left: 10%;
+    	width: 40%;
+    	margin-top: 20px;
     	& > * {
     		margin-bottom: 30px;
     	}
     	.header-name {
-    		font-size: 4rem;
+    		font-size: 2em;
     	}
     	.header-intro {
-    		font-size: 2rem;
+    		font-size: 1em;
+    		line-height: 1.4em;
     	}
     	.header-social {
-    		font-size: 1rem;
+    		font-size: 1em;
+    		line-height: 20px;
     		li {
     			margin: 10px 0;
 	    		a {
@@ -50,7 +58,27 @@ $dark-bg-clr: #444;
 	    		}
     		}
     	}
+    	@media (min-width: 40em) {
+	    	.header-name {
+	    		font-size: 3.9em;
+	    	}
+	    	.header-intro {
+	    		font-size: 1.3em;
+	    	}
+    	}
     }
+	.header-avatar {
+		max-width: 100%;
+		width: 35%;
+		position: absolute;
+		bottom: 0;
+		right: 0;
+	}
+	@media (min-width: 54em) {
+		.header-avatar {
+		    width: 300px;
+		}
+	}
 }
 
 .article {
