--- a/css-src/style.css
+++ b/css-src/style.css
@@ -7,6 +7,7 @@ a {
 
 .header {
   border-bottom: 5px solid transparent;
+  border-top: 5px solid transparent;
   border-image: linear-gradient(to right, #d62d20, #ffa700 33%, #008744 66%, #0057e7);
   border-image-slice: 1;
   background-color: #fafafa;
