--- a/css-src/style.css
+++ b/css-src/style.css
@@ -16,6 +16,9 @@ a {
   width: 100%;
   color: #444;
   position: relative; }
+  .header .header-bg {
+    position: absolute;
+    opacity: 0.3; }
   .header .header-info {
     position: relative;
     left: 10%;
@@ -52,7 +55,8 @@ a {
 
 .article {
   background-color: #444;
-  padding: 20px; }
+  padding: 20px;
+  box-shadow: inset 0 0px 5px 2px rgba(0, 0, 0, 0.4); }
   .article .sites {
     display: flex; }
     .article .sites .item {
