--- a/public/global.css
+++ b/public/global.css
@@ -10,10 +10,14 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #eee;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(93, 0, 200);
 	text-decoration: none;
 }
 
@@ -22,7 +26,7 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(93, 0, 200);
 }
 
 label {
